IE menu bar fixes
Menu bar was not visible; upon making it visible, it did not work due to a duplicate element ID.  Checkboxes in the sidebar also overlapped the dropdown menus.

--- a/style/gismo.css
+++ b/style/gismo.css
@@ -26,11 +26,13 @@ img {
     float: left;
 } 
 #header {
-    position: fixed;
+    position: absolute;
+    top: 0; left: 0;
     height: 25px;
     padding:0;
     border-bottom: 1px solid #999;
     background:#222;
+    z-index:1;
 }
 #header #logo {
     position:absolute;
